--- a/my-project/package.json
+++ b/my-project/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "prop-types": "^15.8.1",
@@ -35,6 +37,6 @@
     "postcss": "^8.4.45",
     "react-error-overlay": "^6.0.9",
     "tailwindcss": "^3.4.11",
-    "vite": "^5.4.1"
+    "vite": "^5.4.9"
   }
 }
