--- a/my-project/package.json
+++ b/my-project/package.json
@@ -19,6 +19,7 @@
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
     "prop-types": "^15.8.1",
+    "qrcode.react": "^4.1.0",
     "react": "^18.3.1",
     "react-bootstrap-country-select": "^1.0.0",
     "react-dom": "^18.3.1",
