--- a/my-project/package.json
+++ b/my-project/package.json
@@ -18,11 +18,13 @@
     "dotenv": "^16.4.5",
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
+    "mui": "^0.0.1",
     "prop-types": "^15.8.1",
     "qrcode.react": "^4.1.0",
     "react": "^18.3.1",
     "react-bootstrap-country-select": "^1.0.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^6.26.2",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.5"
