--- a/my-project/package.json
+++ b/my-project/package.json
@@ -12,8 +12,12 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^2.2.4",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mui/icons-material": "^6.1.10",
+    "@mui/material": "^6.1.10",
     "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "flowbite": "^2.5.2",
