--- a/my-project/package.json
+++ b/my-project/package.json
@@ -23,9 +23,11 @@
     "react": "^18.3.1",
     "react-bootstrap-country-select": "^1.0.0",
     "react-dom": "^18.3.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.26.2",
     "semantic-ui-css": "^2.5.0",
-    "semantic-ui-react": "^2.1.5"
+    "semantic-ui-react": "^2.1.5",
+    "swiper": "^11.1.15"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
