--- a/my-project/package.json
+++ b/my-project/package.json
@@ -29,6 +29,7 @@
     "react-bootstrap-country-select": "^1.0.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.26.2",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.5"
